changes to lab-1